--- a/css/styles.css
+++ b/css/styles.css
@@ -8,27 +8,30 @@
 
 /* основной цвет фона #FFFFFF   */
 /* вторичный цвет фона  #2F303A */
-/* світло сірий #F5F4FA  */
-/* фон кольору темно сірий  #E5E5E5  */
+/* светло серый фон #F5F4FA  */
+/* фон цвета темно-серый  #E5E5E5  */
 
 
 :root{
     --primary-text-color:#757575 ;
-
     --title-text-color: #212121;
     --primary-white-color: #FFFFFF;
     --white-bg-color: #E5E5E5;
     --accent-color: #2196F3;
     --blue-color: #188CE8 ;
+    --secondary-bg-color: #2F303A;
+    --light-grey-bg-color: #F5F4FA;
+    --dark-grey-bg-color: #E5E5E5;
+
 }
 body {
-    background-color: #FFFFFF;
+    background-color: var(--primary-white-color);
 
     color: var(--primary-text-color);
 
     font-family: Roboto, sans-serif;
-    Font-style:400;
-    letter-spacing: -0.03em; 
+    font-size: 14px;
+    letter-spacing: 0.03em; 
 }
 
 .list {
@@ -42,16 +45,16 @@ body {
     color: var(--accent-color);
     font-family: Raleway, sans-serif;
     
-     font-style: 700;
-     Font-size: 26px;
-     Line-height: 1.19;
+    font-weight: 700;
+     font-size: 26px;
+     line-height: 1.19;
      text-decoration: none;
 }    
 .logo-black {
     color: var(--title-text-color);
 }
 .logo-white{
-    color:#FFFFFF;
+    color:var(--primary-white-color);
 }
 
 /* Site-nav*/
@@ -59,10 +62,11 @@ body {
 .site-nav .link {
     color: var(--title-text-color);
     
-    font-style: 500;
-    Font-size: 14px;
-    Line-height: 1.14 ;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14 ;
     font-family: inherit;
+    letter-spacing: 0.02em;
     text-decoration: none;  
 }
 
@@ -80,10 +84,11 @@ body {
     color: var(--primary-text-color);
    
     
-    font-style: 500;
-    Font-size: 14px;
-    Line-height: 1.14;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
     font-style: normal; 
+    letter-spacing: 0.02em;
     text-decoration: none;  
 }
 
@@ -96,46 +101,44 @@ body {
 .hero-title {
     color: var(--primary-white-color);
 
-    Font-style:900;
-    Font-size: 44px ;
-    Line-height: 1.36 ;
-    text-align: Center ;
-    
+    font-weight:900;
+    font-size: 44px ;
+    line-height: 1.36 ;
+    text-align: center ;
     letter-spacing: 0.06em;
 }
 .bgr-hero{
-    background-color: #2F303A;
+    background-color: var(--secondary-bg-color);
 }
 /* Section */
 .section-title {
     color: var(--title-text-color);
     
-    Font-style: 700; 
-    Font-size: 36px;
-    Line-height: 1.17;
-    
+    font-weight: 700; 
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center ;
 }
 
 /*  Features */
 .feature-list .title {
     color: var(--title-text-color);
    
-    font-style: 700 ;
+    font-weight: 700 ;
     font-size: 14px ;
-    line-height: 1.14 ; 
-            
+    line-height: 1.14 ;            
 }
 
 .feature-list .text{
-    Font-style:400;
-    Font-size: 14px ;
-    Line-height: 1.71;
+    font-weight:400;
+    font-size: 14px ;
+    line-height: 1.71;
 }
 .box{
-    background-color: #E5E5E5;
+    background-color: var(--primary-white-color);
 }
 .bgr-feature{
-    background-color: #F5F4FA;
+    background-color:var(--light-grey-bg-color) ;
 }
 
 .link-white{
@@ -148,11 +151,12 @@ body {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
 
-        font-style: 700;
+        font-weight: 700;
         Font-size: 16px;
         Line-height: 1.88;
         cursor: pointer;
-        text-align: center; 
+        text-align: center;
+        letter-spacing: 0.06em; 
 }
 .button:hover,
 .button:focus{
@@ -164,9 +168,9 @@ body {
 .button-item {
     color: var(--title-text-color);
    
-    Font-style: 500;
-    Font-size: 16px;
-    Line-height: 1.63;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
     font-family: inherit;
     cursor: pointer;
     
@@ -175,28 +179,31 @@ body {
 .button-item:hover,
 .button-item:focus {
     background-color: var(--blue-color);
+    color: var(--primary-white-color);
 }
 
-.list{
-    text-decoration: none;
-}
 .subtitle{
     color: var(--title-text-color);
 
-    Font-style: 700;  
+    font-weight: 700;  
     font-size: 18px; 
-    Line-height: 2; 
-    text-decoration: none;
+    line-height: 2; 
+    letter-spacing: 0.06em;
+    
 }
 
 .text-list{
     color: var(--primary-text-color);
      
-    Font-style: 400; 
-    Font-size: 16px;
-    Line-height: 1.88;
-    text-decoration: none;
+    font-weight: 400; 
+    font-size: 16px;
+    line-height: 1.88;
+    
 }
+.projects{
+    text-decoration: none;  
+}
+
 .bgr-footer{
-    background-color: #2F303A;
+    background-color: var(--secondary-bg-color);
 }
