--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,6 @@ body {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    font-style: normal; 
     letter-spacing: 0.02em;
     text-decoration: none;  
 }
@@ -222,8 +221,10 @@ body {
     font-style: normal;
     text-decoration: none;
 }
-
-.white-rgba {
+.footer-item .link {
+    font-size: 14px;
+    line-height:1.7;
     color:var(--white-rgba);
+    font-style: normal;
+    text-decoration: none;
 }
-
